--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "plugin-skeleton",
+  "name": "occurrence-tracker",
   "version": "0.0.0",
-  "license": "MIT",
+  "license": "Proprietary",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "package": "rm -rf ./plugin-skeleton; ng build; mkdir -p ./plugin-skeleton/ng; cp -f ./api/plugin-skeleton.php ./plugin-skeleton/plugin-skeleton.php; cp -rfvp ./dist/* ./plugin-skeleton/ng/"
+    "package": "rm -rf ./occurrence-tracker; ng build; mkdir -p ./occurrence-tracker/ng; cp -f ./api/occurrence-tracker.php ./occurrence-tracker/occurrence-tracker.php; cp -rfvp ./dist/* ./occurrence-tracker/ng/"
   },
   "private": true,
   "dependencies": {
